Fixed aligned nodes_scope_name with its coresponding search input

--- a/openbudget/apps/projects/static/projects/explorer/css/globals.css
+++ b/openbudget/apps/projects/static/projects/explorer/css/globals.css
@@ -50,6 +50,7 @@ svg {
 }
 .uijet_clearabletextinput {
     width: 100%;
+    padding: 0;
     font-size: 3.261rem;
     line-height: 150%;
     border: none;
